# AID

./: .env.example  .gitignore  .mcp.json  .mcp.json.example  .mcp.json.mac  .mcp.json.windows  .pre-commit-config.yaml  BEST-PRACTICES.md  CLAUDE.md  DEPENDENCIES.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  README.md  SECURITY.md  SKILL.md  docker-compose.yml  install.bat  install.sh  jest.config.js  jest.setup.js  link-project.bat  link-project.sh  llm.txt  llms-full.txt  llms.txt  next.config.js  package-lock.json  package.bat  package.json  package.sh  setup-figma-server.bat  setup-mcp.bat  tsconfig.json
.claude/: settings.json  settings.local.json
.claude/agents/: AGENT-STANDARD.md
.claude/commands/: aid-end.md  aid-improve.md  aid-init.md  aid-pair.md  aid-reset.md  aid-start.md  aid-status.md  aid-test.md  architecture.md  build-page.md  code-review.md  context-update.md  context.md  design-review.md  design-system.md  discovery.md  figma-relay.md  gate-check.md  good-morning.md  implementation-plan.md  jira-breakdown.md  link-project.md  phase-advance.md  phase-approve.md  (+16 more)
.well-known/: llms.txt
docs/: MORNING-STARTUP.md  PHASE-GATES.md  TEST-SCENARIOS.md  UPGRADE-GUIDE.md  WORK-CONTEXT-TRACKER.md  mcp-setup.md
memory-system/: INTEGRATION.md  README.md  pyproject.toml  subagent.py
memory-system/analysis/: __init__.py  dashboard.py  memory_sync.py  metrics.py  patterns.py
memory-system/docs/: AGENT.md  COMMANDS.md  ERROR-HANDLING.md  IMPROVEMENT-FLOW.md  MEMORY-INIT.md  MEMORY.md  MIGRATION.md  SUB-AGENT.md  TROUBLESHOOTING.md  USER-GUIDE.md  prompts.md
memory-system/feedback/: __init__.py  collector.py  schema.json
memory-system/integration/claude-md-section/: ADD-TO-CLAUDE-MD.md
memory-system/integration/commands/: aid-memory.md  aid-start.md  good-morning.md
memory-system/memory_system/: __init__.py  __main__.py
memory-system/memory_system/analysis/: memory_sync.py  patterns.py
memory-system/memory_system/feedback/: collector.py
memory-system/memory_system/recommendations/: __init__.py
memory-system/recommendations/: generator.py
memory-system/samples/: analysis-sample.json  feedback-sample.json
memory-system/skills/phases/breakdown/: SKILL.md
memory-system/skills/phases/development/: SKILL.md
memory-system/skills/phases/discovery/: SKILL.md
memory-system/skills/phases/prd/: SKILL.md  cumulative.md
memory-system/skills/phases/qa-ship/: SKILL.md  cumulative.md
memory-system/skills/roles/developer/: SKILL.md  cumulative.md
memory-system/skills/roles/product-manager/: SKILL.md
memory-system/skills/roles/qa-engineer/: SKILL.md  cumulative.md
memory-system/templates/: config.yaml  memory-tracking.json  state.json  trends.json
prisma/: schema.prisma
public/: README.md
scripts/: create-migration.js  generate-keys.js  init-project.sh  migrate.js  run-sanity-tests.bat  run-sanity-tests.sh  startup-check.sh  test-commands.js  test-methodology.sh
server/: .env.example  package-lock.json  package.json  vitest.config.ts
storybook-preview/: package-lock.json  package.json
templates/: prd-template.md
test-recordings/: README.md
testing/: conftest.py
tests/: README.md  testrail-import.csv
(+490 files in other folders)
